fix(shell): fix incorrect dark mode text color in calendar

--- a/gnome-shell/src/gnome-shell-sass/_drawing.scss
+++ b/gnome-shell/src/gnome-shell-sass/_drawing.scss
@@ -229,7 +229,7 @@ $button_bg_color: mix($tc, $c, 5%);
     &:insensitive {
       @include button(insensitive);
       background-color: transparent;
-      color: transparentize($selected_fg_color, .5);
+      color: transparentize($fg_color, .5);
     }
   }
 }
